--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@
 **/.idea
 **/__pycache__
 **/catboost_info
+
+image-recommendation-system/Flickr8k_Dataset
+image-recommendation-system/Flickr8k_text
